--- a/q/275630.html
+++ b/q/275630.html
@@ -26,14 +26,51 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>100</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
-<tr d-ix="2"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
-<tr d-ix="3"><td>094</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
-<tr d-ix="4"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
-<tr d-ix="5"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
+<tr d-ix="0"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
+<tr d-ix="1"><td>100</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
+<tr d-ix="3"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
+<tr d-ix="4"><td>094</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
+<tr d-ix="5"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
+<tr d-ix="6"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> 100 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 83 bytes</h1>
+<pre><code>CLS
+1c=ASC(INPUT$(1))
+d=d-(d&gt;0)*(c=8)+(c&gt;47)*(c&lt;58)
+CLS
+?STRING$(d,42)
+IF d&lt;4GOTO 1
+</code></pre>
+<p>Try it at <a href="https://archive.org/details/msdos_qbasic_megapack" rel="nofollow noreferrer">Archive.org</a>!</p>
+<h3>Explanation</h3>
+<pre><code>CLS
+</code></pre>
+<p>Clear the screen.</p>
+<pre><code>1
+</code></pre>
+<p>Line number (used as a <code>GOTO</code> target later)</p>
+<pre><code>c = ASC(INPUT$(1))
+</code></pre>
+<p>Read one character from user input, get its ASCII code, and store that in <code>c</code>. Digits are 48-57; backspace is 8.</p>
+<pre><code>d = d - (d &gt; 0) * (c = 8) + (c &gt; 47) * (c &lt; 58)
+</code></pre>
+<p>Update <code>d</code>, the number of digits entered so far. (Like all numeric variables in QBasic, it starts out with a value of 0.)</p>
+<ul>
+<li>If <code>d &gt; 0</code> and <code>c = 8</code> are both truthy (-1), multiply them to get 1 and subtract that from <code>d</code>. That is, if there are any digits and the user presses backspace, remove one digit.</li>
+<li>If <code>c &gt; 47</code> and <code>c &lt; 58</code> are both truthy (-1), multiply them to get 1 and add that to <code>d</code>. That is, if the user presses a digit key, add one digit.</li>
+</ul>
+<p>All other keypresses have no effect on <code>d</code>.</p>
+<pre><code>CLS
+PRINT STRING$(d, 42)
+</code></pre>
+<p>Clear the screen and print a string of <code>d</code> asterisks (ASCII code 42).</p>
+<pre><code>IF d &lt; 4 THEN GOTO 1
+</code></pre>
+<p>If the number does not have four digits yet, go back to line 1 and input another character. Otherwise, the program is over and halts.</p>
+<p>The leading <code>CLS</code> is perhaps not necessary. Without it, the screen initially shows the results of the last program run, and it is only cleared once the user presses their first key. Since this includes <em>any</em> key, not just the number &amp; backspace keys, I thought it probably ran afoul of &quot;All other key presses should be ignored,&quot; so I included an initial clear-screen just in case.</p>
+</div>
+<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> 100 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c|!isNaN(value[3])&amp;&amp;event.preventDefault()</code></pre>
@@ -54,7 +91,7 @@
 <li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1>ZX Spectrum 48K/128K Basic, 121 bytes</h1>
+<div id="pu2" class="pu"><h1>ZX Spectrum 48K/128K Basic, 121 bytes</h1>
 <pre><code>   2 LET a=NOT PI
    3 IF INKEY$&lt;&gt;&quot;&quot; THEN GO TO PI
    4 LET a$=INKEY$: IF a$=&quot;&quot; THE
@@ -86,12 +123,12 @@ N GOTO VAL &quot;4&quot;
 <p>Repeat until <code>4</code> digits have been input. (<code>PI</code> is doing a lot of heavy lifting in this program!)</p>
 <p>This program could also be adapted to run on the ZX81 but you would need to split line <code>4</code> up into two lines as the ZX81 only accepts one statement per line except in <code>IF...THEN</code> statements. This would increase the byte count by <code>4</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 86 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 86 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>n;main(c){for(;n&lt;4;write(1,&quot;\r    \r****&quot;,(c-8?c&gt;47&amp;c&lt;58?++n:n:n?--n:n)+6))c=getch();}
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 94 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 94 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>while (($#a&lt;4)); do
 read -sk1 k
@@ -114,7 +151,7 @@ while (($#asterisks &lt; 4)); do
 done
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
+<div id="pu5" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves</p>
 <pre><code>    org 100h
     mov bx, 0AE00h
@@ -143,7 +180,7 @@ bksp:
 00000020: 0272 f3c6 0720 ebdd                      .r... ..
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>fn f(x:&amp;str){let x=x.chars().filter(|y|y.is_digit(10)).collect::&lt;Vec&lt;_&gt;&gt;();for i in 0..std::cmp::min(x.len(),4){dbg!(x[i]);}}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LY5BCoJAFECvMm1iPtRg0CJG8xhtIsTGGfswasx8YUQ9SRuDWnWibpNgqwdv897j5VpP08fUrMqx5sD6d0tme_iOszI8yLUnB73VxMIxCHXLnecgDFrSjg_d0An0WYElEt9FAEI11mpFUiYnrZIsTTnEpnEMGdYsEsJTIaWq7lJWcy8Iq-fqZg99cS1XPJzxAvE4LhPPP6dp4Q8" rel="nofollow noreferrer">Attempt This Online!</a></p>
