--- a/q/275630.html
+++ b/q/275630.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>094</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
+<tr d-ix="0"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
 <tr d-ix="1"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
 <tr d-ix="2"><td>100</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
@@ -34,20 +34,19 @@
 <tr d-ix="5"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
 <tr d-ix="6"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>94</s> 94 bytes</h1>
-<p>Edit: Lost 3 bytes to fix a bug (if first key is backspace, <code>a[1]=</code> makes <code>$a</code> an array). Saved 3 bytes by not using <code>%s</code> in the printf statement.</p>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>94</s> 87 bytes</h1>
+<p>Lost 3 bytes to fix a bug (if first key is backspace, <code>a[1]=</code> makes <code>$a</code> an array). Saved 3 bytes by not using <code>%s</code> in the printf statement, then 7 more by switching from <code>while</code> to <code>for</code>.</p>
 
 <pre class="lang-sh prettyprint-override"><code>a=
-while (($#a&lt;4)); do
-read -sk1 k
+for ((;$#a&lt;4;))
+{read -sk1 k
 case $k {$'\C-?')a[1]=;;[0-9])a+=*;}
-printf '\r\e[K'$a
-done
+printf '\r\e[K'$a}
 </code></pre>
 <hr />
 <pre class="lang-sh prettyprint-override"><code>asterisks=
 # $#foo: length of $foo
-while (($#asterisks &lt; 4)); do
+for ((;$#asterisks &lt; 4;)); {
     # -s: silent/noecho, -k 1: one keypress
     read -s -k 1 key
     case $key {
@@ -57,7 +56,7 @@ while (($#asterisks &lt; 4)); do
     }
     # \r: start of line, \e[K: clear to end of line
     printf '\r\e[K'$asterisks
-done
+}
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 83 bytes</h1>
