--- a/q/160646.html
+++ b/q/160646.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>146</td><td>Python 3</td><td>240919T064500Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275629#275629">The Empt</a></td></tr>
+<tr d-ix="0"><td>144</td><td>Python 3</td><td>240919T064500Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275629#275629">The Empt</a></td></tr>
 <tr d-ix="1"><td>015</td><td>Javascript</td><td>240828T131847Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275204#275204">ThePlane</a></td></tr>
 <tr d-ix="2"><td>047</td><td>tinylisp</td><td>240917T065117Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275577#275577">Andrew B</a></td></tr>
 <tr d-ix="3"><td>069</td><td>Malbolge</td><td>231204T162708Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/267279#267279">ceilingc</a></td></tr>
@@ -222,15 +222,15 @@
 <tr d-ix="193"><td>010</td><td>Pyth</td><td>180329T153850Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160649#160649">user4854</a></td></tr>
 <tr d-ix="194"><td>007</td><td>Jelly</td><td>180329T154145Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160650#160650">Esolangi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 146 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 144 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>try:
- (lambda x:(type(lambda:0))(compile('0','','exec'),{},'', tuple('69'*(x+6))))(67)(0)
+ (lambda x:(type(lambda:0))(compile('','','exec'),{},'',tuple('69'*(x+6))))(66)(0)
 except TypeError as e:
  print(str(e)[30-7:30-4],'bytes')
 </code></pre>
-<p><a href="https://tio.run/##LY3NCsIwEITvfYrcdlcrBCop5u4beBMPbVyw0J@QrJAgPntMwWEY@BiY8Vle29qVIiHbRuE8LONzUMmiZM9/tJoI3bb4aWYEDS1Uc2IH1H6@Oyl5@70zFzhgOhqqQtMTamo4OfaibnXvGsIW1BAV1y8fplUwSkCme6dPva1xfrQwZuEIVMoP" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>My favourite method, along with a 69!</p>
+<p><a href="https://tio.run/##LY3NCsIwEITvfYrcsqsRCpWIufcNvImHNi5Y6M@SrJAgPntMwWEY@BiY4Syvbe1KkZBdo2AelvE5qORAMtMfXYsIflt4mgm0NrspkddoPt@d5M17Y6/6AOlosQqsRWixoeSJRd3qWh/CFtQQFdUnDtMqECUA4b1rTxdX4/wwesxCUWMpPw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Still a refreshing 69, but now golfed!</p>
 </div>
 <div id="pu1" class="pu"><h1>Javascript: 15 bytes</h1>
 <p>not sure the exact rules, but I am treating a function as the program.</p>
