--- a/q/275630.html
+++ b/q/275630.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>Ruby</td><td>240919T200321Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275655#275655">Jordan</a></td></tr>
-<tr d-ix="1"><td>100</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>094</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>079</td><td>Ruby</td><td>240919T200321Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275655#275655">Jordan</a></td></tr>
 <tr d-ix="2"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
 <tr d-ix="3"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
 <tr d-ix="4"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
@@ -35,7 +35,28 @@
 <tr d-ix="6"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
 <tr d-ix="7"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Ruby, 79 bytes</h1>
+<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> 94 bytes</h1>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c|!!value[3]&amp;&amp;event.preventDefault()</code></pre>
+</div>
+</div>
+</p>
+<p>-54 bytes thanks to <em>@Shaggy</em>.</p>
+<p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
+<p><strong>Explanation:</strong></p>
+<ul>
+<li><code>&lt;input</code> - Input box</li>
+<li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
+<li><code>onkeydown=</code> - Capture and handle key-presses</li>
+<li><code>(c=event.which)</code> - Save the current key pressed as codepoint integer in variable <code>c</code></li>
+<li><code>!=8&amp;c&lt;48|57&lt;c</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (codepoint range [48,57])</li>
+<li><code>|!!value[3]</code> - Or if the fourth digit has been entered and we're done (the <code>!!value[3]</code> instead of only <code>value[3]</code> is for edge case <code>0</code> as fourth digit, which is just like <code>undefined</code> falsey).</li>
+<li><code>&amp;&amp;</code> - If the previous is truthy, execute the following:</li>
+<li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1>Ruby, 79 bytes</h1>
 <p>Contains unprintable characters. (See ungolfed code).</p>
 <pre class="lang-ruby prettyprint-override"><code>i=0
 (c=STDIN.getch
@@ -58,27 +79,6 @@ $&gt;&lt;&lt;?*))while i&lt;4
     )
 ) while i &lt; 4
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> 100 bytes</h1>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c|!isNaN(value[3])&amp;&amp;event.preventDefault()</code></pre>
-</div>
-</div>
-</p>
-<p>-48 bytes thanks to <em>@Shaggy</em>.</p>
-<p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
-<p><strong>Explanation:</strong></p>
-<ul>
-<li><code>&lt;input</code> - Input box</li>
-<li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
-<li><code>onkeydown=</code> - Capture and handle key-presses</li>
-<li><code>(c=event.which)</code> - Save the current key pressed as codepoint integer in variable <code>c</code></li>
-<li><code>!=8&amp;c&lt;48|57&lt;c</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (codepoint range [48,57])</li>
-<li><code>|!isNaN(value[3])</code> - Or if the fourth digit has been entered and we're done (the <code>!isNaN(value[3])</code> instead of only <code>value[3]</code> is for edge case <code>0</code> as fourth digit, which is just like <code>undefined</code> falsey).</li>
-<li><code>&amp;&amp;</code> - If the previous is truthy, execute the following:</li>
-<li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
-</ul>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 86 bytes</h1>
 
