--- a/q/275630.html
+++ b/q/275630.html
@@ -26,16 +26,53 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>094</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>079</td><td>Ruby</td><td>240919T200321Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275655#275655">Jordan</a></td></tr>
-<tr d-ix="2"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
-<tr d-ix="3"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
-<tr d-ix="4"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
-<tr d-ix="5"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
-<tr d-ix="6"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
+<tr d-ix="0"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
+<tr d-ix="1"><td>094</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>079</td><td>Ruby</td><td>240919T200321Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275655#275655">Jordan</a></td></tr>
+<tr d-ix="3"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
+<tr d-ix="4"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
+<tr d-ix="5"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
+<tr d-ix="6"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="7"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> 94 bytes</h1>
+<div id="pu0" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
+<p>Not placing on left-to corner saves</p>
+<pre><code>    org 100h
+    mov bx, 0AE00h
+    mov ds, bx
+f:  mov ah, 0
+    int 16h
+    cmp al, 8
+    je  bksp
+    sub al, '0'
+    cmp al, 10
+    jnb f
+    mov [bx], byte '*'
+t:  inc bx
+    inc bx
+    cmp bl, 8
+    jb  f
+    ret
+bksp:
+    sub bl, 2
+    jc  t
+    mov [bx], byte ' '
+    jmp f
+
+00000000: bb00 ae8e dbb4 00cd 163c 0874 112c 303c  .........&lt;.t.,0&lt;
+00000010: 0a73 f2c6 072a 4343 80fb 0872 e8c3 80eb  .s...*CC...r....
+00000020: 0272 f3c6 0720 ebdd                      .r... ..
+</code></pre>
+<hr />
+<h1>HTML, 82 bytes</h1>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input onkeydown="return value[3]?!1:(c=event.which^48)-56&amp;&amp;![value+=9&lt;c?'':'*']"&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> 94 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c|!!value[3]&amp;&amp;event.preventDefault()</code></pre>
@@ -56,7 +93,7 @@
 <li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1>Ruby, 79 bytes</h1>
+<div id="pu2" class="pu"><h1>Ruby, 79 bytes</h1>
 <p>Contains unprintable characters. (See ungolfed code).</p>
 <pre class="lang-ruby prettyprint-override"><code>i=0
 (c=STDIN.getch
@@ -80,7 +117,7 @@ $&gt;&lt;&lt;?*))while i&lt;4
 ) while i &lt; 4
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 86 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 86 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>n;main(c){for(;n&lt;4;write(1,&quot;\r    \r****&quot;,(c-8?c&gt;47&amp;c&lt;58?++n:n:n?--n:n)+6))c=getch();}
 </code></pre>
@@ -92,7 +129,7 @@ $&gt;&lt;&lt;?*))while i&lt;4
 <li>Change <code>getch</code> to <code>getchar</code></li>
 </ul>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>94</s> 87 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>94</s> 87 bytes</h1>
 <p>Lost 3 bytes to fix a bug (if first key is backspace, <code>a[1]=</code> makes <code>$a</code> an array). Saved 3 bytes by not using <code>%s</code> in the printf statement, then 7 more by switching from <code>while</code> to <code>for</code>.</p>
 
 <pre class="lang-sh prettyprint-override"><code>a=
@@ -117,7 +154,7 @@ for ((;$#asterisks &lt; 4;)); {
 }
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 83 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 83 bytes</h1>
 <pre><code>CLS
 1c=ASC(INPUT$(1))
 d=d-(d&gt;0)*(c=8)+(c&gt;47)*(c&lt;58)
@@ -153,7 +190,7 @@ PRINT STRING$(d, 42)
 <p>If the number does not have four digits yet, go back to line 1 and input another character. Otherwise, the program is over and halts.</p>
 <p>The leading <code>CLS</code> is perhaps not necessary. Without it, the screen initially shows the results of the last program run, and it is only cleared once the user presses their first key. Since this includes <em>any</em> key, not just the number &amp; backspace keys, I thought it probably ran afoul of &quot;All other key presses should be ignored,&quot; so I included an initial clear-screen just in case.</p>
 </div>
-<div id="pu5" class="pu"><h1>ZX Spectrum 48K/128K Basic, 121 bytes</h1>
+<div id="pu6" class="pu"><h1>ZX Spectrum 48K/128K Basic, 121 bytes</h1>
 <pre><code>   2 LET a=NOT PI
    3 IF INKEY$&lt;&gt;&quot;&quot; THEN GO TO PI
    4 LET a$=INKEY$: IF a$=&quot;&quot; THE
@@ -184,35 +221,6 @@ N GOTO VAL &quot;4&quot;
 </code></pre>
 <p>Repeat until <code>4</code> digits have been input. (<code>PI</code> is doing a lot of heavy lifting in this program!)</p>
 <p>This program could also be adapted to run on the ZX81 but you would need to split line <code>4</code> up into two lines as the ZX81 only accepts one statement per line except in <code>IF...THEN</code> statements. This would increase the byte count by <code>4</code>.</p>
-</div>
-<div id="pu6" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
-<p>Not placing on left-to corner saves</p>
-<pre><code>    org 100h
-    mov bx, 0AE00h
-    mov ds, bx
-f:  mov ah, 0
-    int 16h
-    cmp al, 8
-    je  bksp
-    sub al, '0'
-    cmp al, 10
-    jnb f
-    mov [bx], byte '*'
-t:  inc bx
-    inc bx
-    cmp bl, 8
-    jb  f
-    ret
-bksp:
-    sub bl, 2
-    jc  t
-    mov [bx], byte ' '
-    jmp f
-
-00000000: bb00 ae8e dbb4 00cd 163c 0874 112c 303c  .........&lt;.t.,0&lt;
-00000010: 0a73 f2c6 072a 4343 80fb 0872 e8c3 80eb  .s...*CC...r....
-00000020: 0272 f3c6 0720 ebdd                      .r... ..
-</code></pre>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>fn f(x:&amp;str){let x=x.chars().filter(|y|y.is_digit(10)).collect::&lt;Vec&lt;_&gt;&gt;();for i in 0..std::cmp::min(x.len(),4){dbg!(x[i]);}}
