--- a/q/275630.html
+++ b/q/275630.html
@@ -64,13 +64,14 @@ bksp:
 00000020: 0272 f3c6 0720 ebdd                      .r... ..
 </code></pre>
 <hr />
-<h1>HTML, 82 bytes</h1>
+<h1>HTML, 78 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input onkeydown="return value[3]?!1:(c=event.which^48)-56&amp;&amp;![value+=9&lt;c?'':'*']"&gt;</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input onkeydown=return!value[3]&amp;&amp;(c=event.which^48)-56&amp;&amp;![value+=9&lt;c?'':'*']&gt;</code></pre>
 </div>
 </div>
 </p>
+<p>From Kevin Cruijssen's solution, doesn't handle Shift well</p>
 </div>
 <div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> 94 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
