--- a/q/275630.html
+++ b/q/275630.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
-<tr d-ix="1"><td>094</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>076</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
 <tr d-ix="2"><td>079</td><td>Ruby</td><td>240919T200321Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275655#275655">Jordan</a></td></tr>
 <tr d-ix="3"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
 <tr d-ix="4"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
@@ -35,7 +35,34 @@
 <tr d-ix="6"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="7"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
+<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> 76 bytes</h1>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=return!value[3]&amp;&amp;(c=event.which)==8|47&lt;c&amp;c&lt;56</code></pre>
+</div>
+</div>
+</p>
+<p>-54 bytes thanks to <em>@Shaggy</em><br />
+-18 bytes thanks to <em>@l4m2</em></p>
+<p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
+<p><strong>Explanation:</strong></p>
+<ul>
+<li><code>&lt;input</code> - Input box</li>
+<li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
+<li><code>onkeydown=</code> - Capture and handle key-presses</li>
+<li><code>(c=event.which)</code> - Save the current key pressed as codepoint integer in variable <code>c</code></li>
+<li><code>!=8&amp;c&lt;48|57&lt;c</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (codepoint range [48,57])</li>
+<li><code>|!!value[3]</code> - Or if the fourth digit has been entered and we're done (the <code>!!value[3]</code> instead of only <code>value[3]</code> is for edge case <code>0</code> as fourth digit, which is just like <code>undefined</code> falsey).</li>
+<li><code>&amp;&amp;</code> - If the previous is truthy, execute the following:</li>
+<li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
+</ul>
+<p><em>Known issues:</em></p>
+<ul>
+<li>Shift + digits (aka <code>!@#$%&amp;*()</code>) seem to work again unfortunately, even though I explicitly fixed that in my initial 150 bytes version.</li>
+<li>'preparation characters' (aka <code>'&quot;\</code>~^<span class="math-container">`</span>) also still seem to work unfortunately..</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves</p>
 <pre><code>    org 100h
     mov bx, 0AE00h
@@ -72,27 +99,6 @@ bksp:
 </div>
 </p>
 <p>From Kevin Cruijssen's solution, doesn't handle Shift well</p>
-</div>
-<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> 94 bytes</h1>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c|!!value[3]&amp;&amp;event.preventDefault()</code></pre>
-</div>
-</div>
-</p>
-<p>-54 bytes thanks to <em>@Shaggy</em>.</p>
-<p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
-<p><strong>Explanation:</strong></p>
-<ul>
-<li><code>&lt;input</code> - Input box</li>
-<li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
-<li><code>onkeydown=</code> - Capture and handle key-presses</li>
-<li><code>(c=event.which)</code> - Save the current key pressed as codepoint integer in variable <code>c</code></li>
-<li><code>!=8&amp;c&lt;48|57&lt;c</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (codepoint range [48,57])</li>
-<li><code>|!!value[3]</code> - Or if the fourth digit has been entered and we're done (the <code>!!value[3]</code> instead of only <code>value[3]</code> is for edge case <code>0</code> as fourth digit, which is just like <code>undefined</code> falsey).</li>
-<li><code>&amp;&amp;</code> - If the previous is truthy, execute the following:</li>
-<li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
-</ul>
 </div>
 <div id="pu2" class="pu"><h1>Ruby, 79 bytes</h1>
 <p>Contains unprintable characters. (See ungolfed code).</p>
