--- a/q/275596.html
+++ b/q/275596.html
@@ -26,13 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>Charcoal</td><td>240919T155240Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275645#275645">Neil</a></td></tr>
-<tr d-ix="1"><td>029</td><td>APLDyalog Unicode</td><td>240918T161407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275615#275615">akamayu</a></td></tr>
+<tr d-ix="0"><td>028</td><td>APLDyalog Unicode</td><td>240918T161407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275615#275615">akamayu</a></td></tr>
+<tr d-ix="1"><td>039</td><td>Charcoal</td><td>240919T155240Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275645#275645">Neil</a></td></tr>
 <tr d-ix="2"><td>014</td><td>Jelly</td><td>240918T130840Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275611#275611">Jonathan</a></td></tr>
 <tr d-ix="3"><td>019</td><td>05AB1E</td><td>240918T080738Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275605#275605">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>059</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 39 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>29</strike> 28 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>-1 byte by replacing <code>()</code> with an <code>¨</code> on <code>,¨∘⌽⍨∘⍸</code></p>
+<p>Prints the first n pairs.</p>
+<pre><code>{⍵↑⊃,⌿,¨∘⌽⍨∘⍸¨1≠∨∘⌽⍨¨⍳¨⍳⍵+9}
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=q37Uu/VR28RHXc06j3r26xxa8ahjxqOevY96wYzeHYdWGD7qXPCoAyEOVNK7GUwAtWpb1gIA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W62AAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 39 bytes</h1>
 <pre><code>ＮθＷ‹Ｌυθ«→ＦΦ…²ⅈ⊙…²ⅈ¬∨﹪ⅈμ﹪κμ⊞⊞Ｏυκ⁻ⅈκ»Ｉ…υθ
 </code></pre>
 <p><a href="https://tio.run/##XY7NCsIwEITP9ily3EC99CR6EkEQtC2evMYam9CYbfOjiPjscYOeXNiBGb5ht1PCdShMSjs7xlDH21k6mPiqeChtJIO99J7E9kFB5CWbOGevYnbAu4TlUfcqEDu7omOw1SZQ@ShsL6Eq2Qk4Fdb2@R/VGKBxcMBLNAiUlexG@/NDdnlYG72CLM0onQjoIJZsyKS20X@LA6f776J12gbYCE/y7IzcKBwzTe/yVUrVIs3v5gM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>n</code> as input and outputs the first <code>n</code> elements. Explanation:</p>
@@ -54,12 +61,6 @@
 <pre><code>»Ｉ…υθ
 </code></pre>
 <p>Output the first <code>n</code> elements.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>29 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<p>Prints the first n pairs</p>
-<pre><code>{⍵↑⊃,⌿(,¨∘⌽⍨∘⍸1≠∨∘⌽⍨)¨⍳¨⍳⍵+9}
-</code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=q37Uu/VR28RHXc06j3r2a@gcWvGoY8ajnr2PesGM3h2GjzoXPOpAiGoCVfRuBhNArdqWtQA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W42MgUA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>żṚṄ€g/Ḋ$¡€ṛŻ‘ß
