--- a/q/275630.html
+++ b/q/275630.html
@@ -55,6 +55,11 @@
 <li><code>&amp;&amp;</code> - If the previous is truthy, execute the following:</li>
 <li><code>event.preventDefault()</code> - Prevent the default behavior of the key-press, aka do nothing instead</li>
 </ul>
+<p><em>Known issues:</em></p>
+<ul>
+<li>Shift + digits (aka <code>!@#$%&amp;*()</code>) seem to work again unfortunately, even though I explicitly fixed that in my initial 150 bytes version.</li>
+<li>'preparation characters' (aka <code>'&quot;`~^</code>) also still seem to work unfortunately, even beyond four characters..</li>
+</ul>
 </div>
 <div id="pu1" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves</p>
