--- a/q/108831.html
+++ b/q/108831.html
@@ -38,9 +38,10 @@
 <tr d-ix="9"><td>104</td><td>PowerShell</td><td>170131T234848Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108833#108833">briantis</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>22</s> 19 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>Input as a string, output as an array of strings.</p>
 <pre><code>4Æ=ü@bXÃcò9 ËÊ+DÎÃ¬
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=NMY9/EBiWMNj8jkgy8orRM7DrA&amp;input=IjExMTExMTExMTExMSI" rel="nofollow noreferrer">Try it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=NMY9/EBiWMNj8jkgy8orRM7DrA&amp;input=IjExMTExMTExMTExMSI" rel="nofollow noreferrer">Try it</a> or <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=NMY9/EBiWMNj8jkgy8orRM7DrA&amp;input=WwoiNjU3NyIKIjExMTExMTExMTExMSIKIjc2NTciCiI3NSIKIjEiCl0tbVI" rel="nofollow noreferrer">run all test cases</a></p>
 <pre><code>4Æ=ü@bXÃcò9 ËÊ+DÎÃ¬     :Implicit input of string U
 4Æ                      :Map the range [0,4)
   =                     :  Reassign to U
