--- a/q/214044.html
+++ b/q/214044.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>023</td><td>Uiua</td><td>240921T012016Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/275666#275666">Adelie</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Japt P</td><td>201023T200305Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/214047#214047">Shaggy</a></td></tr>
-<tr d-ix="2"><td>111</td><td>Rust</td><td>240919T172709Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/275650#275650">bzr</a></td></tr>
+<tr d-ix="0"><td>103</td><td>Rust</td><td>240919T172709Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/275650#275650">bzr</a></td></tr>
+<tr d-ix="1"><td>023</td><td>Uiua</td><td>240921T012016Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/275666#275666">Adelie</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Japt P</td><td>201023T200305Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/214047#214047">Shaggy</a></td></tr>
 <tr d-ix="3"><td>037</td><td>bash + coreutils</td><td>231121T192450Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/266963#266963">Someone</a></td></tr>
 <tr d-ix="4"><td>100</td><td>JavaScript</td><td>201024T192110Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/214089#214089">bzr</a></td></tr>
 <tr d-ix="5"><td>101</td><td>Lexurgy</td><td>220121T063731Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/241516#241516">bigyihsu</a></td></tr>
@@ -58,7 +58,13 @@
 <tr d-ix="29"><td>026</td><td>Retina 0.8.2</td><td>201023T195933Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/214045#214045">Neil</a></td></tr>
 <tr d-ix="30"><td>015</td><td>Jelly</td><td>201023T200212Z</td><td><a href="https://codegolf.stackexchange.com/questions/214044/get-the-systematic-chemical-symbol/214046#214046">caird co</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 23 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>111</s> 103 bytes</h1>
+<p>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/52904">ceilingcat</a></p>
+<pre class="lang-rust prettyprint-override"><code>let f=|s:&amp;str|{for c in s.chars(){let e=c.to_digit(10).unwrap()as usize;dbg!(&amp;&quot;nubtqphsoe&quot;[e..e+1]);}};
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=Jc1BCsIwEEDRq4xdlAQx2J1YehIRSdukDWhaMxME05zETQRdeSJvI5LV23z4j5fzSOmjLVyksYxDeHvSm913OCsC3Sy4L5HcEvTkoANjAUU3SoeMh3-hmk7QdOrNYIhVWy68vTk5My4RPJq7qvt2WLGysL6l6zzipIqDEkKtqyOvY6zz7hmzKWV_" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 23 bytes</h1>
 <pre><code>⊂⊙(↘1)⌵⊢.⊏:&quot;nubtqphsoe&quot;
 </code></pre>
 <p>Function that takes in an array of digits and maps each digit to a letter. <a href="https://uiua.org/pad?src=0_13_0-dev_2__RiDihpAg4oqC4oqZKOKGmDEp4oy14oqiLuKKjzoibnVidHFwaHNvZSIKCkYxXzFfOQpGMV8yXzAKRjFfMl8zCkY5XzlfOQpGNl84XzVfOQpGMQpGOV8yCkY5XzhfN182XzVfNF8zXzJfMQpGMV8wXzFfMF8xXzBfMQo=" rel="nofollow noreferrer">Try it online!</a></p>
@@ -77,7 +83,7 @@
 ⊂                       # join the character and string together
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-P</code></a>, <s>17</s> <s>16</s> 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-P</code></a>, <s>17</s> <s>16</s> 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ì`eo¢pqt¿n`Ô vu
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVA&amp;code=7GBlb6JwcXS/bmDUIHZ1&amp;input=OTg3NjU0MzIx" rel="nofollow noreferrer">Try it</a></p>
@@ -89,11 +95,6 @@
          u     :  Uppercase
                :Implicitly join and output
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 111 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>let f=|s:&amp;str|{let d=&quot;nubtqphsoe&quot;;for c in s.chars(){let e=c.to_digit(10).unwrap()as usize;dbg!(&amp;d[e..e+1]);}};
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=JY1BCsIwEAC_svZQEsRgb2LoS0QkbZI2oEmb3SDY9iVeKujJF_kb0Z6GgYG5P2NCmt_Ww0U5zzgMr0R2s_uEsyGw5Yj7HCmOw091mflUUd-1GEwmbYhQg_OAom5VRMb_lSlrQeGkXeOIFVsukr9G1TGuEBK6m5G6alYs1wcjhFkXRy6nSS7bx7Rwnhd-AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu3" class="pu"><h2>bash + coreutils, <s>40</s> 37 bytes</h2>
 <pre class="lang-bash prettyprint-override"><code>c=`tr 0-9 nubtqphsoe&lt;&lt;&lt;$1`
