--- a/q/275630.html
+++ b/q/275630.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>091</td><td>R + keypress</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
+<tr d-ix="0"><td>089</td><td>R + keypress</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
 <tr d-ix="1"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
 <tr d-ix="2"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
 <tr d-ix="3"><td>094</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
@@ -37,11 +37,12 @@
 <tr d-ix="8"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="9"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>keypress</code>, 91 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>keypress</code>, <s>91</s> 89 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>while(F&lt;4){cat(c(&quot;\b \b&quot;,&quot;*&quot;)[(x=(nchar(k&lt;-keypress::keypress())&gt;8&amp;F)-k%in%0:9)%%3])
 F=F-x}
 </code></pre>
+<p>(note that <code>\b</code> represents a single <code>08</code> byte in the source code)</p>
 <p>The <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> <code>keypress</code> library indicates that it &quot;currently only works at Linux/Unix and OSX terminals, and at the Windows command line&quot;, so unfortunately I don't know of an online site where this will run correctly.</p>
 <p><code>keypress()</code> returns the character representing the key pressed, or a string representing 'special' keys, of which <code>&quot;backspace&quot;</code> is the only one with &gt;8 characters, so <code>nchar()&gt;8</code> saves 4 bytes compared to <code>==&quot;backspace&quot;</code> and 3 bytes compared to <code>grepl(&quot;ba&quot;,)</code>.</p>
 </div>
